...
	
// Method for adding operand
	func shoulAddOperand(_ operatorSymbol: String) throws {
//		Checks if an operand should be added.
		guard canAddOperator else {
//			Throws an error
			throw OperationError.NotAllowedToIncludOperand("Un operateur est déja mis !")
		}
//		Get rids of white space before adding.
    startNewOperation = false
    if expression.count >= 3 { try? calculate() }
		expression.append(operatorSymbol.trimmingCharacters(in : .whitespaces))
	}
...
    startNewOperation = true
  }
	
	private func calculate() throws {
//		Checks if there is enough elements
		if expressionHaveEnoughElement == false {
			throw OperationError.NotEnoughtElements("Démarrez un nouveau calcul !")
//	Make a last check
		}else if expressionIsCorrect == false {
			throw OperationError.NotCompleteOperation("Entrez une expression correcte !")
		}
    // Create local copy of operations
    var calculator = Calculator(operationsToReduce: expression)
...
