...
    //      Alerts the user by showing an alert view
    alertUserWith(message: error.description)
	}
	
//	Method for instantiating an alert view with custom message
	private func alertUserWith(message: String){
		let alertVC = UIAlertController(title: "Zéro!", message: message, preferredStyle: .alert)
		alertVC.addAction(UIAlertAction(title: "OK", style: .cancel, handler: nil))
		self.present(alertVC, animated: true, completion: nil)
	}

}

...
